[package]
name = "alien"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
fs_extra = "1.3.0"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
zip = "2.2.0"
